<resources>
    <string name="app_name" translatable="false">File Bucket</string>
    <string name="first_run_title">Welcome!</string>
    <string name="first_run_summary">To access and create contents, login with your credentials</string>
    <string name="first_run_terms">By continuing, you agree to the, Privacy Policy and Terms of Service.</string>
    <string name="auth_title">Sign in</string>
    <string name="auth_summary">Enter the email address and password that you signed up with</string>
    <string name="register_email_title">Hi there!</string>
    <string name="register_email_summary">Be sure to use the email address that you have access to</string>
    <string name="register_details_title">Tell us about yourself</string>
    <string name="register_details_summary">We\'ll need some basic info about yourself to get you started</string>
    <string name="register_password_title">Account Security</string>
    <string name="register_password_summary">Think of a complex password that comprises of a upper and lower case letters, symbols and numbers</string>
    <string name="intro_cloud_storage_title">Secure Cloud Storage</string>
    <string name="intro_cloud_storage_desc">Add files to the organization\'s secure and private cloud storage</string>
    <string name="intro_share_people_title">Share with People</string>
    <string name="intro_share_people_desc">Every file you upload will be shared among your classmates. So no more emailing.</string>
    <string name="intro_collections_title">File Collections</string>
    <string name="intro_collections_desc">Save files to your collections without downloading them</string>
    <string name="instruction_password">Enter first your old password, then enter the new one twice, and press continue to save the changes</string>
    <string name="instruction_reset">Enter your email address and press continue to send the reset link</string>
    <string name="file_timestamp_today">Today at %1$s</string>
    <string name="file_size_kilobytes">%1$s KB</string>
    <string name="file_size_megabytes">%1$s MB</string>
    <string name="support_feedback_item_privacy">Privacy</string>
    <string name="support_feedback_item_interface">Interface and Design</string>
    <string name="support_feedback_item_usage">Device Usage</string>
    <string name="support_feedback_item_accessibility">Accessibility</string>
    <string name="support_other_data_sent_warning">Sending feedback also includes some device and user information</string>
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_browse">Browse</string>
    <string name="button_upload">Upload</string>
    <string name="button_download">Download</string>
    <string name="button_send">Send</string>
    <string name="button_schedule">Schedule</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_remove">Remove</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_forgot_password">Forgot Password</string>
    <string name="button_turn_on_storage_access">Turn on Storage Access</string>
    <string name="button_go_to_settings">Go to Settings</string>
    <string name="button_go_to_notification_settings">Go to Notification Settings</string>
    <string name="file_user_repository">%1$s\'s Box</string>
    <string name="details_file_title">File Details</string>
    <string name="detail_file_size_placeholder">Size: %1$s MB</string>
    <string name="detail_file_type_placeholder">Type: %1$s</string>
    <string name="detail_file_timestamp_placeholder">Date Uploaded: %1$s</string>
    <string name="detail_file_size">Size</string>
    <string name="detail_file_type">Type</string>
    <string name="detail_file_timestamp">Timestamp</string>
    <string name="file_type_unknown">Unknown</string>
    <string name="file_type_directory">File Folder</string>
    <string name="file_type_document">Document</string>
    <string name="file_type_package">Android App Package</string>
    <string name="file_type_code">Source Code</string>
    <string name="file_type_photo">Photo</string>
    <string name="file_type_music">Music</string>
    <string name="file_type_video">Video</string>
    <string name="file_type_database">Database</string>
    <string name="field_hint_name_file">File Name</string>
    <string name="field_hint_search">Search for files</string>
    <string name="field_hint_email">Email Address</string>
    <string name="field_hint_password">Password</string>
    <string name="field_hint_password_old">Old Password</string>
    <string name="field_hint_password_new">New Password</string>
    <string name="field_hint_password_confirm">Confirm Password</string>
    <string name="field_hint_name_first">First Name</string>
    <string name="field_hint_name_last">Last Name</string>
    <string name="field_hint_feedback_summary">Summary</string>
    <string name="field_hint_feedback_information">Additional Information</string>
    <string name="menu_search">Search</string>
    <string name="menu_done">Done</string>
    <string name="main_empty_no_notifications">There are currently no notifications</string>
    <string name="main_empty_no_items">Look\'s like there\'s no items available</string>
    <string name="main_empty_no_local">There\'s no items in your Downloads folder</string>
    <string name="main_empty_no_shared">You do not have any shared files</string>
    <string name="main_empty_permission_not_granted">We\'ll need you to grant us some permissions before we can do anything</string>
    <string name="main_empty_no_saved_title">There are no saved items from the cloud</string>
    <string name="main_empty_no_saved_summary">To save a file, long tap an item on the \"Cloud\" section then tap "\Save\"</string>
    <string name="main_empty_no_result_title">No Results for \"%1$s\"</string>
    <string name="main_empty_no_result_summary">Try a different search term using the name or the author\'s name</string>
    <string name="navigation_cloud">Cloud</string>
    <string name="navigation_boxes">Boxes</string>
    <string name="navigation_saved">Saved</string>
    <string name="navigation_account">Account</string>
    <string name="navigation_shared">Shared</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="navigation_downloads">Downloads</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>
    <string name="navigation_secure">Secure Account</string>
    <string name="navigation_reset">Reset Password</string>
    <string name="navigation_signout">Sign out</string>
    <string name="filter_all">All Files</string>
    <string name="filter_documents">Documents</string>
    <string name="filter_code">Source Codes</string>
    <string name="filter_media">Media Files</string>
    <string name="sheet_picker_title">Add New File</string>
    <string name="sheet_picker_file">Documents</string>
    <string name="sheet_picker_image">Media</string>
    <string name="activity_account_settings">Account Settings</string>
    <string name="activity_about">About</string>
    <string name="status_drawer_open">Drawer Open</string>
    <string name="status_drawer_closed">Drawer Closed</string>
    <string name="status_sending_success">Sending success</string>
    <string name="status_error_occurred">An error occurred</string>
    <string name="status_blank_fields">Enter the required info in all fields</string>
    <string name="status_password_not_match">Passwords did not match</string>
    <string name="status_email_reset_sent">Password Reset Link Sent</string>
    <string name="status_change_committed">Changes Saved</string>
    <string name="status_error_unknown">An unknown error occurred</string>
    <string name="status_item_saved">Item Saved</string>
    <string name="status_item_removed">Item Removed</string>
    <string name="status_verifying">Verifying…</string>
    <string name="status_invalid_email_address">Invalid Email Address</string>
    <string name="status_invalid_password">Email or Password is incorrect</string>
    <string name="status_email_already_taken">Email Address already has an account associated with it</string>
    <string name="status_intent_no_app">No installed application can open this file type</string>
    <string name="status_network_no_internet">Can\'t connect at the moment</string>
    <string name="status_network_no_internet_actionable">Can\'t connect at the moment. Tap here to open WiFi Settings</string>
    <string name="notification_channel_default" translatable="false">Default</string>
    <string name="notification_channel_transfer" translatable="false">Transfer</string>
    <string name="notification_channel_support" translatable="false">Support</string>
    <string name="notification_transferring_title">Uploading to the cloud</string>
    <string name="notification_percent_complete">%1$d%% Completed</string>
    <string name="notification_updating_profile">Updating Profile</string>
    <string name="notification_downloading_file">Downloading File %1$s</string>
    <string name="notification_new_file_title">%1$s uploaded a new file</string>
    <string name="notification_new_file_content">%1$s has been uploaded. Check it out!</string>
    <string name="notification_download_failed_title">Download Failed</string>
    <string name="notification_download_failed_content">Check your network and try downloading again.</string>
    <string name="notification_download_finished_title">Download finished</string>
    <string name="notification_download_finished_content">Your file has finished downloading. Tap this notification to open it.</string>
    <string name="notification_update_available_title">New Update Available</string>
    <string name="notification_update_available_content">Install updates to make your experience faster and smoother.</string>
    <string name="notification_unsupported_version_title">Please update your File Bucket</string>
    <string name="notification_unsupported_version_content">The version you are using are not currently supported by the Development Team. To have the smoothest and fastest experience possible, install available updates.</string>
    <string name="notification_file_upload_success">Upload Successful</string>
    <string name="notification_file_upload_error">Upload Task Encountered an Error</string>
    <string name="notification_support_feedback_sent_title">Feedback Sent</string>
    <string name="notification_support_feedback_sent_content">Thanks for making this app better!</string>
    <string name="dialog_sign_out_title">Sign Out?</string>
    <string name="dialog_sign_out_summary">You\'ll need to enter your credentials once again if you need to access the materials.</string>
    <string name="dialog_file_download_title">Do you want to download %1$s?</string>
    <string name="dialog_file_download_summary">If you have a limited data plan, this will count with your data allowance.</string>
    <string name="dialog_permission_revoked_title">Grant us your permission</string>
    <string name="dialog_permission_revoked_summary">To fully use this application, we\'ll need you to allow Storage Permission requests to download files</string>
    <string name="dialog_confirm_password_title">Confirm your password</string>
    <string name="dialog_confirm_password_summary">For security purposes, please enter your password again.</string>
    <string name="dialog_token_error">Token Error</string>
    <string name="dialog_verifying_account">Verifying</string>
    <string name="dialog_creating_account">Creating Account</string>
    <string name="dialog_sending_reset_link">Sending</string>
    <string name="dialog_working_on_it">Working on it</string>
</resources>