<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCardBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_vertical"
            android:layout_marginBottom="@dimen/activity_margin_vertical"
            android:layout_marginStart="@dimen/activity_margin_horizontal"
            android:layout_marginEnd="@dimen/activity_margin_horizontal"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/privacyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_feedback_item_privacy"
                style="@style/AppTheme.Widget.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/interfaceChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_feedback_item_interface"
                style="@style/AppTheme.Widget.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/usageChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_feedback_item_usage"
                style="@style/AppTheme.Widget.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/accessibilityChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_feedback_item_accessibility"
                style="@style/AppTheme.Widget.Chip.Filter"/>

        </com.google.android.material.chip.ChipGroup>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="@dimen/activity_margin_horizontal"
            android:layout_marginEnd="@dimen/activity_margin_horizontal"
            app:hasClearButton="true"
            app:useDenseSpacing="true"
            app:labelText="@string/field_hint_feedback_summary">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/summaryField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"/>

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="@dimen/activity_margin_horizontal"
            android:layout_marginEnd="@dimen/activity_margin_horizontal"
            app:useDenseSpacing="true"
            app:labelText="@string/field_hint_feedback_information">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/infoField"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:inputType="textMultiLine"
                android:imeOptions="actionNone"
                android:gravity="top"
                android:maxLines="8"/>

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>