<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                app:singleSelection="true">

            <com.google.android.material.chip.Chip
                    android:id="@+id/privacyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_feedback_item_privacy"
                    style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                    android:id="@+id/interfaceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_feedback_item_interface"
                    style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                    android:id="@+id/usageChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_feedback_item_usage"
                    style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                    android:id="@+id/accessibilityChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_feedback_item_accessibility"
                    style="@style/Widget.MaterialComponents.Chip.Filter"/>

        </com.google.android.material.chip.ChipGroup>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="@dimen/activity_margin_start"
                android:layout_marginEnd="@dimen/activity_margin_end"
                app:hasFocus="true"
                app:hasClearButton="true"
                app:maxCharacters="72"
                app:labelText="@string/field_hint_feedback_summary">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/summaryField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="@dimen/activity_margin_start"
                android:layout_marginEnd="@dimen/activity_margin_end"
                app:labelText="@string/field_hint_feedback_information"
                app:maxCharacters="256">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/infoField"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionNone"
                    android:gravity="top"
                    android:maxLines="8"/>

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>