<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="48dp"
            android:paddingEnd="48dp">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/register_password_title"
                android:textSize="24sp"
                android:textAppearance="@style/AppTheme.TextAppearance.Title"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/register_password_summary"
                android:textAppearance="@style/AppTheme.TextAppearance.Subtitle"/>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:useDenseSpacing="true"
                app:minCharacters="8"
                app:hasClearButton="true"
                app:labelText="@string/field_hint_password">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:textColor="@color/colorPrimaryText"/>

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:useDenseSpacing="true"
                app:minCharacters="8"
                app:hasClearButton="true"
                app:labelText="@string/field_hint_password_confirm">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/confirmPasswordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:textColor="@color/colorPrimaryText"/>

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueButton"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/button_continue"
            style="@style/AppTheme.Widget.Button"/>

    </LinearLayout>

</RelativeLayout>