<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingStart="@dimen/first_run_margin_horizontal"
        android:paddingEnd="@dimen/first_run_margin_horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/register_email_title"
            android:textSize="24sp"
            android:textAppearance="@style/AppTheme.TextAppearance.Title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/register_email_summary"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle"/>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:useDenseSpacing="true"
            app:hasClearButton="true"
            app:labelText="@string/field_hint_email">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textColor="@color/colorPrimaryText"/>

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueButton"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="@string/action_continue"
            style="@style/AppTheme.Widget.Button"/>

    </LinearLayout>

</RelativeLayout>